# leptos-ecommerce

./: .gitignore  0001_core_tables.sql  0001_core_tables_depre.sql  README.md
chapter01/01_start/client/: Cargo.toml
chapter01/02_complete/api/: Cargo.toml  rustfmt.toml
chapter01/02_complete/api/src/: lib.rs
chapter01/02_complete/api/src/migrations/: 20240103054658_posts.up.sql
chapter01/02_complete/client/src/: main.rs
chapter02/01_start/: Makefile
chapter02/01_start/db/: Dockerfile.dev
chapter1/01_start/api/: Cargo.toml
chapter1/01_start/client/: Cargo.toml
chapter1/01_start/client/src/: app.rs
chapter1/02_complete/api/: Cargo.toml  rustfmt.toml
chapter1/02_complete/api/src/: lib.rs
chapter1/02_complete/client/src/: main.rs
origin/: Makefile  justfile
origin/api/: Cargo.toml  Dockerfile.dev  docker-entrypoint-dev.sh
origin/api/src/: lib.rs  main.rs
origin/api/src/config/: mod.rs
origin/api/src/entities/: app_state.rs
origin/api/src/migrations/: 0001_core_tables.sql  20240103054658_posts.up.sql  20240103061914_users.up.sql
origin/api/src/seeders/: sqlx_seeder copy 2.rs  sqlx_seeder copy 3.rs  sqlx_seeder copy 4.rs  sqlx_seeder copy 5.rs  sqlx_seeder copy 7.rs  sqlx_seeder copy 8.rs  sqlx_seeder copy 9.rs  sqlx_seeder copy.rs  sqlx_seeder.rs  sqlx_seeder_90_complete.rs
origin/client/: Cargo.toml  Dockerfile.dev  README.md  docker-entrypoint-dev.sh
origin/client/src/: app.rs  leptosfmt.toml  main.rs
origin/gateway/config/dev/: default.conf
origin/scripts_docker_dev/: docker-compose.dev.yml
(+16 files in other folders)
