[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# lib 섹션을 작성하면 다른 크레이트에서 프로젝트를 가져올 수 있다
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server-rs"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-http = "3.3.1"
actix-web = "4.4.0"

sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
] }
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
] }
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13"
sqlx-pg-seeder = "0.1.4"
